syntax = "proto3";

package persist;

import "google/protobuf/timestamp.proto";

import "common.proto";

// Snapshot of metadata of one folder
message MetadataSnap {
  // timestamp of capture
  google.protobuf.Timestamp ts = 1;
  // canonicalized path
  string path = 2;
  /// last synchronization with given paths (local or remote)
  map<string, google.protobuf.Timestamp> last_syncs = 3;
  // directory information
  common.MyDirEntry root = 4;
}
